# fiat

./: pyproject.toml
fiat/: __init__.py  base.py  core.py  interface.py  nodes.py  options.py  shared.py  stages.py  structures.py  workers.py  workshop.py
tests/: test_fiat.py  test_interface.py  test_project.py  test_structures.py
