[tool.poetry]
name = "fiat"
version = "0.1.0"
description = ""
authors = ["WithPrecedent <coreyrayburnyung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.8.0"
denovo = { git = "ssh://git@https://github.com/WithPrecedent/denovo.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
