[tool.poetry]
name = "fiat"
version = "0.1.0"
description = "a simple, lightweight, flexible project system"
authors = ["Corey Rayburn Yung <coreyrayburnyung@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/WithPrecedent/denovo"
documentation = "https://denovo.readthedocs.io"
repository = "https://github.com/WithPrecedent/denovo"

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.8.0"
denovo = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"

[tool.coverage.paths]
source = ["fiat"]

[tool.coverage.run]
branch = true
source = ["fiat"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
